# sermonclip

./: .gitignore
.github/workflows/: build-desktop.yml
backend/: .env  .env.production.example  .gitignore  build_sidecar.sh  database.py  main.py  models.py  requirements.txt  sermonclip-api.spec
backend/routers/: analyze.py  clip.py  editor.py  files.py  health.py  image.py  merge.py  process.py  settings_router.py  transcribe.py  video.py  youtube.py
backend/services/: clip_service.py  ffmpeg_path.py  ffmpeg_service.py  highlight_service.py  image_service.py  language_detect.py  ollama_service.py  subtitle_service.py  video_resolver.py  whisper_mlx_service.py  youtube_service.py
desktop/: .env.production.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
desktop/src/: App.tsx  globals.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
docs/plans/: 2026-06-23-sermon-highlights-design.md  2026-06-23-sermon-highlights-implementation.md  2026-06-26-youtube-source-design.md  2026-06-30-desktop-vite-migration-design.md  2026-06-30-desktop-vite-migration.md  2026-06-30-native-desktop-features.md  2026-06-30-pyinstaller-distribution.md  2026-07-01-standalone-sqlite-migration.md
frontend/: package-lock.json  package.json
supabase/: config.toml
supabase/migrations/: 20260622000000_initial_schema.sql  20260622130000_fix_registration_flow.sql  20260622140000_add_cancel_status.sql  (+14 more)
(+111 files in other folders)
